# genomics

./: .gitignore  MANIFEST.in  pyproject.toml  setup.cfg
e2e/: cram_depth_e2e.sh  cram_depth_e2e_test.py  run_cram_depth.sh
e2e/cram_depth_e2e_fixture/: HG00403.cram  HG00404.cram  HG00404.cram.crai  HG00406.cram.crai  HG00419.cram.crai
src/genomics/: __init__.py  __main__.py  acmg.py  align.py  clinvar.py  cnv.py  coordinate.py  coordinates.py  dbsnp.py  depth.py  gencode.py  gene.py  genome.py  genomic_region.py  gregion.py  karyopype.py  kgp.py  region.py  samples.py  snv.py  snv_truth.py  spandel.py  truth.py  utils.py  variant.py  variants.py  vcf.py
src/genomics/resources/: chrom_lengths-hg38.tsv  complex_regions-hg38.tsv  hypervariable_regions-hg38.tsv  ploidy-hg19.txt  ploidy-hg38.txt
src/vcf/: Vcf.py  __init__.py  genomic_region.py  utils.py  vcf.py  vcf_util.py
tests/genomics/: cnv_test.py  coordinates_test.py  cram_depth_e2e_test.py  depth_test.py  genomic_region_test.py  gregion_test.py  snv_truth_e2e_test.py  variant_test.py  vcf_test.py
tests/genomics/cnv/: cnv_test.py
tests/genomics/cnv/fixture/: sample_map.tsv  (+2 more)
tests/genomics/fixture/: annotation.vcf  sample.vcf
tests/genomics/gregion/: gregion_test.py
tests/genomics/samples/: samples_test.py
tests/genomics/spandel/: fixture.vcf  spandel_test.py
tests/genomics/truth/: truth_test.py
tests/genomics/utils/: utils_test.py
tests/genomics/variant/: seq.fa  seq.fa.bgz  variant_test.py
tests/genomics/vcf/: vcf_test.py
tests/genomics/vcf_util/: vcf_util_test.py
tests/vcf/: genomic_region_test.py  vcf_sync_alleles_test.py  vcf_test.py
tests/vcf/fixture/: annotation_target.vcf  sample.vcf  sample.vcf.bgz
tests/vcf/fixture_sync_alleles/: one-sync.vcf  one.vcf  two-sync.vcf  two.vcf
tests/vcf/vcf_util/: fixture.vcf
(+12 files in other folders)
