[build-system]
requires = ["setuptools >= 61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genomics"
version = "0.7.0"
requires-python = ">=3.14"
authors = [
    { name = "Cheng-Yang(Louis) Tang", email = "louis01010100@gmail.com" },
]
dependencies = [
    "polars >= 0.17",
    "pandas >= 0.2.3",
    "biopython >= 1.7",
    "sqlalchemy == 1.4.47",
    "ncls >= 0.0.68",
    "karyopype >= 0.1.6",
    "humanfriendly >= 10.0",
    "icecream >= 2.1.3",
    "matplotlib >= 3.2.0",
    "numpy",
    "pathos >= 0.3.0",
    "pgzip >= 0.3.5",
    "pyarrow",
]

[project.scripts]
genomics = "genomics.__main__:main"

[dependency-groups]
dev = [
    "pytest >= 6.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
