[metadata]
name = genomics
version = 0.5.2
author = Cheng-Yang(Louis) Tang
author_email = louis01010100@gmail.com

[options]
packages = genomics
package_dir = 
    =src

python_requires = >= 3.10
install_requires = 
    polars >= 0.17
    pandas >= 0.2.3
    biopython >= 1.7
    sqlalchemy == 1.4.47
    genomics >= 0.2
    shutil >= 0.1.0

[options.entry_points]
console_scripts = 
    genomics = genomics.__main__:main
