[metadata]
name = genomics
version = 0.5.2
author = Cheng-Yang(Louis) Tang
author_email = louis01010100@gmail.com

[options]
packages = genomics
package_dir = 
    =src

python_requires = >= 3.9
install_requires = 
    polars >= 0.17
    pandas >= 0.2.3
    biopython >= 1.7
    sqlalchemy == 1.4.47
    ncls >= 0.068

[options.entry_points]
console_scripts = 
    genomics = genomics.__main__:main
